--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,8 @@ jobs:
 
       - name: Build release binary
         run: |
-          CGO_ENABLED=0 go build -ldflags="-s -w" -o nginxcachetool
+          LDFLAGS="-s -w -X main.commit=${{ github.sha }} -X main.buildTime=$(date -u +%Y-%m-%dT%H:%M:%SZ)"
+          CGO_ENABLED=0 go build -ldflags="$LDFLAGS" -o nginxcachetool
           tar -czvf nginxcachetool-linux-amd64.tar.gz nginxcachetool LICENSE README.md
 
       - name: Create release
